tests/ui/cross-crate/graceful-error-for-mistyped-assoc-const.stderr
error[E0326]: implemented const `CONST` has an incompatible type for trait
  --> $DIR/graceful-error-for-mistyped-assoc-const.rs:10:18
   |
LL |     const CONST: () = ();
   |                  ^^ expected `u32`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0326`.
